# School_messages_forwarding_app

./: .gitignore  Dockerfile  Dockerfile_gold_app  README.md  app.py  gold_app.py  google_incoming_services.py  open_ai_services.py  pyproject.toml  requirements.txt  requriments.yml  send_message_services.py
.github/workflows/: Run_the_app.yml  build_the_app.yml
src/: app.py
src/exp_tracking_app/: all_exp_messages.py  trail.ipynb
src/gold_app/: gold_app.py
src/utils/: open_ai_services.py  send_message_services.py
